--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4141,7 +4141,7 @@ blockquote {
 .lt-ie8 .demo-col-12 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4163,7 +4163,7 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4185,7 +4185,7 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* Base styles
@@ -4459,7 +4459,7 @@ img {
 
 .lt-ie8 .wrapper {
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_bar {
@@ -4494,7 +4494,7 @@ img {
 .lt-ie8 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .header .demo-placeholder,
@@ -4524,7 +4524,7 @@ img {
 .lt-ie8 .content__1-3 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_sidebar {
@@ -4548,7 +4548,7 @@ img {
 .lt-ie8 .content__1-3 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_main {
@@ -4570,7 +4570,7 @@ img {
 .lt-ie8 .content__2-1 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_sidebar {
@@ -4592,7 +4592,7 @@ img {
 .lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_main,
@@ -5360,7 +5360,7 @@ img {
     - name: Basic hero
       markup: |
         <section class="hero" style="background-color:#337E7D;">
-            <div class="wrapper">
+            <div class="hero_wrapper">
                 <div class="hero_card">
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
@@ -5385,7 +5385,7 @@ img {
           Structural cheat sheet:
           -----------------------
           .hero
-            .wrapper
+            .hero_wrapper
               .hero_card
                 .hero_card-bg
                   .hero_card-padding
@@ -5401,7 +5401,7 @@ img {
           system can dynamically set it. If it makes more sense for your project
           to set it with CSS then please do so."
     - codenotes:
-        - .wrapper
+        - .hero_wrapper
       notes:
         - "To center the hero content with a max-width."
     - codenotes:
@@ -5431,6 +5431,38 @@ img {
   position: relative;
   overflow: hidden;
   background-color: #75787b;
+}
+
+.hero_wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  clear: both;
+}
+
+.lt-ie8 .hero_wrapper {
+  *zoom: 1;
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.hero_wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  clear: both;
+}
+
+.lt-ie8 .hero_wrapper {
+  *zoom: 1;
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .hero_img-container {
@@ -5477,6 +5509,11 @@ img {
   padding-top: 1.875em;
 }
 
+.hero_wrapper {
+  position: relative;
+  z-index: 200;
+}
+
 .hero_img-container__large {
   display: block;
   width: 100%;
@@ -5487,7 +5524,6 @@ img {
 }
 
 .hero_card {
-  position: relative;
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -5498,7 +5534,6 @@ img {
   vertical-align: top;
   width: 100%;
   padding-left: 50%;
-  z-index: 200;
 }
 
 .ie .hero_card {
@@ -5508,7 +5543,7 @@ img {
 .lt-ie8 .hero_card {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://cfpb.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .lt-ie8 .hero_card {
