Testing ie fix.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -259,10 +259,10 @@
     .u-respond-to-min(660px, {
         padding-top: unit(30px / @base-font-size-px, em);
 
-        &_wrapper {
-            position: relative;
-            z-index: 200;
-        }
+        // &_wrapper {
+        //     position: relative;
+        //     z-index: 2;
+        // }
 
         &_img-container__large {
             display: block;
